# niki

./: .gitignore  Cargo.toml  FINDINGS.md  LICENSE  README.md  ROADMAP.md  niki.example.toml
docker/: Dockerfile  Dockerfile.agent
evals/: dataset.toml
evals/fixtures/defect-offbyone/baseline/artifacts/: reviewer.json
evals/fixtures/defect-offbyone/niki/artifacts/: red.json  reviewer.json
evals/fixtures/defect-sql/baseline/artifacts/: reviewer.json
prompts/: coder.md  planner.md  red.md  reviewer.md  security_auditor.md  solo.md  synthesizer.md  tester.md
schemas/: code_diff.schema.json  red_challenge.schema.json  review_feedback.schema.json  review_verdict.schema.json  security_audit.schema.json  synthesis.schema.json  task_spec.schema.json  test_report.schema.json
scripts/: sandbox-bootstrap.sh
src/: cost.rs  lib.rs  main.rs  recommend.rs
src/agents/: mod.rs
src/artifacts/: types.rs  validate.rs
src/cli/: config.rs  dashboard.rs  eval.rs  mod.rs  recommend.rs  report.rs  run.rs  status.rs
src/config/: types.rs
src/display/: agent_stream.rs  artifact_render.rs  banner.rs  completion.rs  diff_display.rs  mod.rs  pipeline_status.rs  theme.rs  tui.rs
src/eval/: mod.rs
src/knowledge/: indexer.rs
src/llm/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src/orchestrator/: pipeline.rs  state.rs
src/output/: dashboard.rs  git.rs  mod.rs  patch.rs  report.rs
src/safety/: mod.rs
src/sandbox/: cloud.rs  docker.rs  mod.rs  worktree.rs
tests/: artifacts_test.rs  config_test.rs  knowledge_test.rs
(+2 files in other folders)
